[tool.poetry]
name = "insight-test"
version = "0.1.0"
description = ""
authors = ["qwertyroiro <roiro8562@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
insightface = "^0.7.3"
numpy = "^1.25.0"
opencv-python = "^4.8.0.74"
cython = "^3.0.4"
onnxruntime = "^1.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
